Some files added

--- a/Exercice_Form/Formulario.html
+++ b/Exercice_Form/Formulario.html
@@ -29,7 +29,8 @@
       <input type="file" >
     </br>
      <label>telefono</label>
-     <input id="PhoneNumber" type="tel" minlength="10" maxlength="10" pattern="[0][0-9]" required>
+     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+
   </br>
       <label>URL</label>
       <input type="url" >
@@ -50,7 +51,7 @@
       <input type="date" >
 </br>
       <label>Búsqueda</label>
-      <input type="search" >
+      <input type="search" value="Enviar" >
 </br>
       <label>Submit</label>
       <input type="submit" >
